snapshots/parsers/cst/sub_statements/sub_friend_modifier.snap
---
source: src/parsers/cst/sub_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SubStatement
      children:
        - kind: FriendKeyword
          text: Friend
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ProcessData
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children: []
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
