snapshots/parsers/cst/sub_statements/sub_private.snap
---
source: src/parsers/cst/sub_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SubStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Initialize
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children: []
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
